@@ -10,7 +10,9 @@ DIST open-vm-tools-2008.04.14-87182.tar.gz 2430703 RMD160 2003b86f881b8a9b51c61e
 DIST open-vm-tools-2008.05.15-93241.tar.gz 2462536 RMD160 6482557a2bfd5628093e7d02262c6cb1f072c334 SHA1 58c1861ffdedb205fe58f65b29ad47bf72ded836 SHA256 465657c6c59b88458bb6bf8a5411ab7d1e5aef548e931b4291c8cec1cba55ea3
 DIST open-vm-tools-2008.07.01-102166.tar.gz 2558112 RMD160 7324a0f7f4f99ee23547bf51aaba316c79ceee55 SHA1 311de7dcc6bf50f017a399180b884150c21a6f32 SHA256 51293ff716bff35ecd03e8747280280be0a748e9fc5ec7c2d02d936b0c86d1c5
 DIST open-vm-tools-2008.08.08-109361.tar.gz 2971141 RMD160 4ea0a6aa2edda2bc404c865dc5b58f3a177ae411 SHA1 1c44c3524cd9cbc5870f1c6065b03a6b31859a25 SHA256 b7abff74f87b05cf1d78c5076c1e5c83b37639eed84498834becdfc20e4f798e
+DIST open-vm-tools-2008.10.10-123053.tar.gz 3186908 RMD160 770cb2ccfca24814cbd04fe3b1d076fdd7e23f1e SHA1 c2f3faa67ca40d4b307df5d87659fa898bcb09e7 SHA256 c67e247d85664747363d830d0d893251f0b9978076ac9ac1a364d6cc5aeecc91
 EBUILD open-vm-tools-0.0.20080414.87182.ebuild 3683 RMD160 1ed0a118495b177076ac4585c512770047ccc02b SHA1 49b56355f9b39f5f2c71fac0a7e723dbaaa63836 SHA256 6ddba316a27d4aac5390b983e0ab905a80727c92a8b0c82e42f68a367b9a525c
 EBUILD open-vm-tools-0.0.20080515.93241.ebuild 3638 RMD160 70ab5b74e1c4452cdc6cc2bfaa61fa8048cc5309 SHA1 d95a10736c41eaf1970b50059f756bbff4506868 SHA256 9fcd8f3c40f8bd8cdb04fed77626b4a485ffc8680b876bfd5734c2a898393697
 EBUILD open-vm-tools-0.0.20080701.102166.ebuild 2701 RMD160 5bc76a6525535758de70ec1fbb57add017e7b1fa SHA1 6bb9d0bc96ed8b1fb9fafe3f8bca9b6cf736617a SHA256 e6dee5b5e4c2cf9aa8f0968b44e5f49acf96c813c65ed7e4bd7706e4f93dc1d8
-EBUILD open-vm-tools-0.0.20080808.109361.ebuild 2866 RMD160 14066d8b183395e13570a20a202fdb929e26b89b SHA1 ace8141c47b138defee27f223b97ecba090128cd SHA256 6f67917b0ea8ec8f37003298247102dfbe63dbbeff1817e63590bd6cc7ad0871
+EBUILD open-vm-tools-0.0.20080808.109361.ebuild 2865 RMD160 d3ec05dfc264a49ed4ebee9a5e30446e09d14f5f SHA1 d3b2438fed7a2f5d8cd84719b9fa51572953a38c SHA256 9b94fc9f74e2ad3161da57c5cc6717c41ecccaf7ab77a5e8ad21f503fcc08eb4
+EBUILD open-vm-tools-0.0.20081010.123053.ebuild 2865 RMD160 d3ec05dfc264a49ed4ebee9a5e30446e09d14f5f SHA1 d3b2438fed7a2f5d8cd84719b9fa51572953a38c SHA256 9b94fc9f74e2ad3161da57c5cc6717c41ecccaf7ab77a5e8ad21f503fcc08eb4
