@@ -18,6 +18,6 @@ DIST VMware-Player-2.5.0-118166.i386.bundle 99282834 RMD160 a24f1b10a3a104191b97
 DIST VMware-Player-2.5.0-118166.x86_64.bundle 63035915 RMD160 a29b3c45e5bca07ef8d725b71ead7a9f222be405 SHA1 38e5cac90c83dcdf91ece6616ddae3a0b40dc3d4 SHA256 1592d9b067273384f8b61e56eb23fccd2a5ef876b60d3fc25821c97d20732c9e
 DIST VMware-player-1.0.9-126128.tar.gz 38963760 RMD160 ed54df1e097894f11b7bbce8215d1f314df03217 SHA1 701ca338ec52dcb60db26908de8e0b5bfd981fb7 SHA256 3fae981892437ec1804a2171b701ca33000405fbd799fb06112fd70c939d8d75
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
-EBUILD vmware-player-1.0.9.126128.ebuild 2663 RMD160 39bfd7ce0f8ee029b019c8531f33b0a04892dfcb SHA1 3fd1e46771a563525719893ef94d5fe04e9ae6ad SHA256 8c1bfcec59da440a07cc2bbc6cb5dfd4f081e3c12478d0553200eb62d826f501
-EBUILD vmware-player-2.5.0.118166.ebuild 5109 RMD160 facf22958e24a4853697ef345f04600309fde587 SHA1 70604a9db13b813676448c6352f5b4c6c1c36e3c SHA256 375f128d3d6fd2cb65071c460b3e575bc6ae86bbc135172d24ff8ee22b2dbff1
+EBUILD vmware-player-1.0.9.126128.ebuild 2651 RMD160 36054a17ee5ec4bc8b35e84cb7f6207703aebdb1 SHA1 cd4cdc99d5c8499ae9ad1873184c835fac7b3a16 SHA256 c2d09869ac8cbef5ca019f864754e90162196707fbc9684c268ef5fbd6b37442
+EBUILD vmware-player-2.5.0.118166.ebuild 5135 RMD160 375ba628cdf93b5fa5607c46a7eb810295d38cde SHA1 281653562f5917edbc77499bc24fd4cf9d121fc3 SHA256 b6ef041ce245aed078329e90d52e113f1869d67beb6b5e85afd679549c991180
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
