@@ -23,6 +23,6 @@ DIST VMware-server-1.0.8-126538.tar.gz 107047809 RMD160 9a1bb74accd2b3e8a84933f9
 DIST VMware-server-2.0.0-122956.i386.tar.gz 565247832 RMD160 c800f11b079b1fe701814df43edacb1195c68db7 SHA1 3532a115e9c4e64144684af4af182bf4ab685c7a SHA256 da9ca9286c36ed0e3402cd9a8a65983f843d2dc16d03c847a4576d45ea5ff8f0
 DIST VMware-server-2.0.0-122956.x86_64.tar.gz 533570301 RMD160 cfe59d36995121bc03e805f8e3154f4b282adfe4 SHA1 f1ffdaeb8307cfc0ed7ee083aba6a66194e99301 SHA256 901de3cb6232beb20d3fdf7399154785955d87214e15d9fbc869255429a6938b
 DIST vmware-server-perl-fixed-rpath-libs.tar.bz2 73834 RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 SHA1 9d696750ca3ec92b31ca8112fd80dcd832494044 SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b
-EBUILD vmware-server-1.0.8.126538.ebuild 3004 RMD160 5c1c3ab03afae41541d94e861f073926d8267a3f SHA1 364c93e0820f4efd2327d6cbae02d0ef29657592 SHA256 f0c17110f565620884d4432dbfc1fe15bf355acb93f95aac6a07575d187c3232
+EBUILD vmware-server-1.0.8.126538.ebuild 3003 RMD160 cbf63a7fd23d2074188b01bb66af5c77fdc1dc3d SHA1 8ef2545bcca483ed620befe435bee01d16a11b5c SHA256 68cf9d6047e2ac672ae034f539a8e9d4e18409d6fbafaa5d9ddb6c827a0e8175
 EBUILD vmware-server-2.0.0.122956.ebuild 2551 RMD160 e13da1fefd8dbe3230f52ae9d0e13af3adbc497c SHA1 b1820542ecfb99f41271cf27f4d12b21fd892d7f SHA256 e49fb0b72068ef7dbe9540c80b1a7ef103c1cc779f854cb94963bd3436768637
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
