@@ -23,4 +23,4 @@ DIST VMware-Workstation-6.5.0-118166.x86_64.bundle 366776834 RMD160 02d4e984a827
 DIST VMware-workstation-5.5.9-126128.tar.gz 111649803 RMD160 a5a867761d36c9a02821f8dd639a95b8c9ab38bc SHA1 eb8786111a74213ea4ec24636a4ba70b7f5dc741 SHA256 71a062e29480a48647c7323883e4e4b43a9365c1bb70000a23b768647db46444
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-workstation-5.5.9.126128.ebuild 3247 RMD160 a619054c3c4318362f30e6ca10047b54c0dd6f6a SHA1 053e1cfd70208934063fbaab49581f7907381b5f SHA256 6470238fc76ab279dfb01ee2b13a4d32ff29d4f96aa9c5d094a09a786de4a214
-EBUILD vmware-workstation-6.5.0.118166.ebuild 5117 RMD160 95897b15a48ccaf8ee33cd203dca7a91fd1959b7 SHA1 a654cec944e08d18f68620f2577cea9710d76ffd SHA256 1a001339bc1d824fec92049ea149f234eba535f76b3aa5c3212f37f4280bd188
+EBUILD vmware-workstation-6.5.0.118166.ebuild 5147 RMD160 193e51a77004971849bc7e4d4d722c586621533e SHA1 904c34f38e743942fb93752a620969240d77866c SHA256 c2a6431343889aae462e5b6ff35c69cdf9f4087595d31dc3554809415d7aed57
